--- a/monarch/src/index.scss
+++ b/monarch/src/index.scss
@@ -1,3 +1,7 @@
+/*Variables*/
+$primary-color: #FFD700;
+$text: black;
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -10,4 +14,18 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.mon-header{
+  background-color: $primary-color;
+}
+.mon-header *{
+  color: $text;
+}
+.mon-header a {
+  transition: .4s;
+}
+.mon-header a:hover{
+  background-color: black !important;
+  color: white;
 }
